I updated the login component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<h1>PIL - Money</h1>
-<p>Proyecto PIL</p>
-<hr>
-<h2>Billetera Digital</h2>
-<p>Sistema web para la creación de una billetera digital</p>
-<hr>
+
+<nav>
+  <a class="button" routerLink="/" routerLinkActive="active">login</a>
+  <a class="button" routerLink="/register" routerLinkActive="active">register</a>
+  <a class="button" routerLink="/actions" routerLinkActive="active">actions</a>
+</nav> 
+<router-outlet></router-outlet>
