--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,58 @@
-<p>register works!</p>
+<section>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-8 col-lg-8 col-xl-6">
+        <div class="row">
+          <div class="col text-center">
+            <h1>Register</h1>
+            <p class="text-h3">Transferir dinero nunca fue más facil!</p>
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col mt-4">
+            <input type="text" class="form-control" placeholder="Name" />
+          </div>
+        </div>
+        <div class="row align-items-center mt-4">
+          <div class="col">
+            <input type="email" class="form-control" placeholder="Email" />
+          </div>
+        </div>
+        <div class="row align-items-center mt-4">
+          <div class="col">
+            <input type="tel" class="form-control" required="required" placeholder="Phone Number" />
+          </div>
+        </div>
+        <div class="row align-items-center mt-4">
+          <div class="col">
+            <input
+              type="password"
+              class="form-control"
+              placeholder="Password"
+            />
+          </div>
+          <div class="col">
+            <input
+              type="password"
+              class="form-control"
+              placeholder="Confirm Password"
+            />
+          </div>
+        </div>
+        <div class="row justify-content-start mt-4">
+          <div class="col">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input type="checkbox" class="form-check-input" />
+                I've read and I accept the
+                <a href="">Terms and Conditions</a>
+              </label>
+            </div>
+
+            <button class="btn btn-primary mt-4">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
