I added a Movimientos section and gave shape to Actions section

--- a/src/app/actions/actions.component.html
+++ b/src/app/actions/actions.component.html
@@ -1,6 +1,28 @@
 <h1>PIL - Money</h1>
-<p>Proyecto PIL</p>
 
-<h2>Billetera Digital</h2>
-<p>Sistema web para la creación de una billetera digital</p>
-<hr />
+<div>
+  <div>
+    <div>Depositar fondos</div>
+    <form>
+      <div>
+        <div>
+          <input name="amount" type="number" />
+          <label>
+            <div>Cantidad</div>
+          </label>
+        </div>
+      </div>
+      <div>
+        <input name="credit" maxLength="16" placeholder="Número de la tarjeta" />
+      </div>
+      <div>
+        <input name="name" placeholder="Nombre en la tarjeta" />
+        <input name="date" placeholder="MM/AA" />
+        <input name="cvc" placeholder="CVC" />
+      </div>
+      <div>
+        <button type="submit">Depositar</button>
+      </div>
+    </form>
+  </div>
+</div>
