--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
-
 <nav>
-  <a class="button" routerLink="/" routerLinkActive="active">login</a>
-  <a class="button" routerLink="/register" routerLinkActive="active">register</a>
-  <a class="button" routerLink="/actions" routerLinkActive="active">actions</a>
-</nav> 
+  <a class="button" routerLink="/" routerLinkActive="active">Iniciar Sesión</a>
+  <a class="button" routerLink="/register" routerLinkActive="active"
+    >Registrarse</a
+  >
+  <a class="button" routerLink="/account" routerLinkActive="active"
+    >Mis Movimientos</a
+  >
+  <a class="button" routerLink="/actions" routerLinkActive="active"
+    >Depositar</a
+  >
+</nav>
 <router-outlet></router-outlet>
