--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,11 @@
 <div class="global-container">
   <div class="card login-form">
     <div class="card-body">
-      <h3 class="card-title text-center">Log in to PIL Money</h3>
+      <h3 class="card-title text-center">Iniciar sesión a PIL Money</h3>
       <div class="card-text">
         <form>
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
+            <label for="exampleInputEmail1">Correo electronico</label>
             <input
               type="email"
               class="form-control form-control-sm"
@@ -14,9 +14,9 @@
             />
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
+            <label for="exampleInputPassword1">Contraseña</label>
             <a href="#" style="float: right; font-size: 12px"
-              >Forgot password?</a
+              >¿Olvidó su contraseña?</a
             >
             <input
               type="password"
@@ -25,11 +25,11 @@
             />
           </div>
           <button type="submit" class="btn btn-primary btn-block">
-            Sign in
+            Iniciar sesión
           </button>
 
           <div class="sign-up">
-            Don't have an account? <a href="#">Create one</a>
+            ¿No tiene una cuenta? <a href="#">Registrese</a>
           </div>
         </form>
       </div>
