--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -10,32 +10,56 @@
         </div>
         <div class="row align-items-center">
           <div class="col mt-4">
-            <input type="text" class="form-control" placeholder="Name" />
+            <input type="text" class="form-control" placeholder="Nombre" />
           </div>
         </div>
         <div class="row align-items-center mt-4">
           <div class="col">
-            <input type="email" class="form-control" placeholder="Email" />
+            <input
+              type="email"
+              class="form-control"
+              placeholder="Correo electrónico"
+            />
           </div>
         </div>
         <div class="row align-items-center mt-4">
           <div class="col">
-            <input type="tel" class="form-control" required="required" placeholder="Phone Number" />
+            <input
+              type="tel"
+              class="form-control"
+              required="required"
+              placeholder="Numero de teléfono"
+            />
           </div>
+        </div>
+
+        <div>
+          <br />
+          <p>Necesitamos una foto de tu DNI</p>
+          <label class="image-upload-container btn btn-bwm">
+            <span>Subir una imagen </span>
+
+            <input
+              #imageInput
+              type="file"
+              accept="image/*"
+              (change)="processFile(imageInput)"
+            />
+          </label>
         </div>
         <div class="row align-items-center mt-4">
           <div class="col">
             <input
               type="password"
               class="form-control"
-              placeholder="Password"
+              placeholder="Contraseña"
             />
           </div>
           <div class="col">
             <input
               type="password"
               class="form-control"
-              placeholder="Confirm Password"
+              placeholder="Confirmar contraseña"
             />
           </div>
         </div>
@@ -44,12 +68,14 @@
             <div class="form-check">
               <label class="form-check-label">
                 <input type="checkbox" class="form-check-input" />
-                I've read and I accept the
-                <a href="">Terms and Conditions</a>
+                He leido y acepto los
+                <a href=""> terminos y condiciones</a>
               </label>
             </div>
 
-            <button class="btn btn-primary mt-4">Submit</button>
+            <button style="margin-bottom: 15px" class="btn btn-primary mt-4">
+              Submit
+            </button>
           </div>
         </div>
       </div>
