--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,7 +4,7 @@
       <div class="col-12 col-md-8 col-lg-8 col-xl-6">
         <div class="row">
           <div class="col text-center">
-            <h1>Register</h1>
+            <h1>Registrarse</h1>
             <p class="text-h3">Transferir dinero nunca fue más facil!</p>
           </div>
         </div>
@@ -74,7 +74,7 @@
             </div>
 
             <button style="margin-bottom: 15px" class="btn btn-primary mt-4">
-              Submit
+              Registrarse
             </button>
           </div>
         </div>
