I added three new components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,9 @@
   <a class="button" routerLink="/actions" routerLinkActive="active"
     >Depositar</a
   >
+  <a class="button" routerLink="/contact" routerLinkActive="active">Contacto</a>
+  <a class="button" routerLink="/faq" routerLinkActive="active"
+    >Preguntas Frecuentes</a
+  >
 </nav>
 <router-outlet></router-outlet>
