I'm asetting some styles on the header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,37 @@
-<nav>
-  <a class="button" routerLink="/" routerLinkActive="active">Iniciar Sesión</a>
-  <a class="button" routerLink="/register" routerLinkActive="active"
-    >Registrarse</a
-  >
-  <a class="button" routerLink="/account" routerLinkActive="active"
-    >Mis Movimientos</a
-  >
-  <a class="button" routerLink="/actions" routerLinkActive="active"
-    >Depositar</a
-  >
-  <a class="button" routerLink="/contact" routerLinkActive="active">Contacto</a>
-  <a class="button" routerLink="/faq" routerLinkActive="active"
-    >Preguntas Frecuentes</a
-  >
+<nav class="navbar navbar-expand-lg">
+  <a class="navbar-brand" href="#"> Nombre aqui </a>
+
+  <button class="navbar-toggler" style="background-color:rgb(122, 122, 122) "type="button" (click)="toggleNavbar()">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse mr-auto" [ngClass]="{ show: navbarOpen }">
+    <ul class="navbar-nav mr-auto">
+      <a class="btn btn-light nav-link" routerLink="/account" routerLinkActive="active"
+        >Mis Movimientos</a
+      >
+      <a
+        class="nav-item active btn btn-light nav-link"
+        routerLink="/actions"
+        routerLinkActive="active"
+        >Depositar</a
+      >
+      <a class="btn btn-light nav-link" routerLink="/contact" routerLinkActive="active"
+        >Contacto</a
+      >
+      <a class="btn btn-light nav-link" routerLink="/faq" routerLinkActive="active"
+        >Preguntas Frecuentes</a
+      >
+      <a class="btn btn-light nav-link" routerLink="/" routerLinkActive="active"
+        >Iniciar Sesión</a
+      >
+      <a
+        class="btn btn-primary nav-link"
+        routerLink="/register"
+        routerLinkActive="active"
+        >Crea tu cuenta</a
+      >
+    </ul>
+  </div>
 </nav>
 <router-outlet></router-outlet>
