I fixed the navbar and some pages

--- a/src/app/actions/actions.component.html
+++ b/src/app/actions/actions.component.html
@@ -1,6 +1,4 @@
-<h1>PIL - Money</h1>
-
-<div>
+<body>
   <div>
     <div>Depositar fondos</div>
     <form>
@@ -13,7 +11,11 @@
         </div>
       </div>
       <div>
-        <input name="credit" maxLength="16" placeholder="Número de la tarjeta" />
+        <input
+          name="credit"
+          maxLength="16"
+          placeholder="Número de la tarjeta"
+        />
       </div>
       <div>
         <input name="name" placeholder="Nombre en la tarjeta" />
@@ -25,4 +27,4 @@
       </div>
     </form>
   </div>
-</div>
+</body>
