--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,22 @@
 <nav class="navbar navbar-expand-lg">
-  <a class="navbar-brand" href="#"> Nombre aqui </a>
-
-  <button class="navbar-toggler" style="background-color:rgb(122, 122, 122) "type="button" (click)="toggleNavbar()">
+  <a class="name navbar-brand" href="#"> Waled </a>
+  <button
+    class="navbar-toggler"
+    style="background-color: rgb(122, 122, 122)"
+    type="button"
+    (click)="toggleNavbar()"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
-
-  <div class="collapse navbar-collapse mr-auto" [ngClass]="{ show: navbarOpen }">
+  <div
+    class="ml-1 collapse navbar-collapse mr-auto"
+    [ngClass]="{ show: navbarOpen }"
+  >
     <ul class="navbar-nav mr-auto">
-      <a class="btn btn-light nav-link" routerLink="/account" routerLinkActive="active"
+      <a
+        class="btn btn-light nav-link"
+        routerLink="/account"
+        routerLinkActive="active"
         >Mis Movimientos</a
       >
       <a
@@ -16,16 +25,23 @@
         routerLinkActive="active"
         >Depositar</a
       >
-      <a class="btn btn-light nav-link" routerLink="/contact" routerLinkActive="active"
+      <a
+        class="btn btn-light nav-link"
+        routerLink="/contact"
+        routerLinkActive="active"
         >Contacto</a
       >
-      <a class="btn btn-light nav-link" routerLink="/faq" routerLinkActive="active"
+      <a
+        class="btn btn-light nav-link"
+        routerLink="/faq"
+        routerLinkActive="active"
         >Preguntas Frecuentes</a
       >
       <a class="btn btn-light nav-link" routerLink="/" routerLinkActive="active"
         >Iniciar Sesión</a
       >
       <a
+        style="color: white"
         class="btn btn-primary nav-link"
         routerLink="/register"
         routerLinkActive="active"
