--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg">
-  <a class="name navbar-brand" href="#"> Waled </a>
+  <a class="name navbar-brand" routerLink="/" routerLinkActive="active">
+    Waled
+  </a>
   <button
     class="navbar-toggler"
     style="background-color: rgb(122, 122, 122)"
@@ -37,7 +39,7 @@
         routerLinkActive="active"
         >Preguntas Frecuentes</a
       >
-      <a class="btn btn-light nav-link" routerLink="/" routerLinkActive="active"
+      <a class="btn btn-light nav-link" routerLink="/login" routerLinkActive="active"
         >Iniciar Sesión</a
       >
       <a
