--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -47,31 +47,18 @@ h1 {
 
 @media only screen and (max-width: 1040px) {
   .landing {
-    background-size: 206vh;
     display: none;
-    width: 100%;
-    height: 100%;
-    filter: brightness(35%);
-    margin-top: 1%;
   }
 
   .line {
     display: none;
   }
-
   h1 {
-    position: absolute;
-    font-size: small;
-    width: 480px;
-    height: 109px;
-    left: 105px;
-    top: 215px;
-    font-family: Roboto;
-    font-style: normal;
-    color: white;
-    font-weight: bold;
-    font-size: 46.7463px;
-    line-height: 55px;
-    text-transform: uppercase;
+    font-size: 5px;
+
+    color: #000;
+  }
+  .cards {
+    display: none;
   }
 }
