I added the component 'Operations' (foreign currency)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,12 @@
         >Mis Movimientos</a
       >
       <a
+        class="btn btn-light nav-link"
+        routerLink="/operations"
+        routerLinkActive="active"
+        >Operaciones</a
+      >
+      <a
         class="nav-item active btn btn-light nav-link"
         routerLink="/actions"
         routerLinkActive="active"
