--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,3 +1,9 @@
-<body>
-  <p>faq works!</p>
-</body>
+<div>
+
+        <div>  
+            <h2 class="text-center pt-3">PREGUNTAS FRECUENTES</h2>
+        </div>
+
+
+</div>
+
