Añadida la parte de retiros

--- a/src/app/actions/actions.component.html
+++ b/src/app/actions/actions.component.html
@@ -41,5 +41,10 @@
     <a routerLink="/services" routerLinkActive="active" type="submit">
       Agregar un Servicio
     </a>
+    <div>
+      <a routerLink="/retiros" routerLinkActive="active" type="submit">
+      Retirar dinero
+    </a>
+    </div>
   </div>
 </body>
