--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,14 +19,9 @@
         class="btn btn-light nav-link"
         routerLink="/account"
         routerLinkActive="active"
-        >Mis Movimientos</a
+        >Mi cuenta</a
       >
-      <a
-        class="nav-item active btn btn-light nav-link"
-        routerLink="/actions"
-        routerLinkActive="active"
-        >Depositar</a
-      >
+
       <a
         class="btn btn-light nav-link"
         routerLink="/contact"
