--- a/src/app/balance/balance.component.html
+++ b/src/app/balance/balance.component.html
@@ -7,8 +7,19 @@
   <div class="balance_text">Saldo disponible</div>
 
   <span class="amount">$ {{ balance }}</span>
-<br/>
-  <button class="card__button">Ingresar dinero</button>
-  <button class="card__button">Transferir dinero</button>
-
+  <br />
+  <button
+    class="card__button"
+    routerLink="/operations/action"
+    routerLinkActive="active"
+  >
+    Ingresar dinero
+  </button>
+  <button
+    class="card__button"
+    routerLink="/operations/transfer"
+    routerLinkActive="active"
+  >
+    Transferir dinero
+  </button>
 </div>
