--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,125 @@
-<p>footer works!</p>
+<!-- Footer -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
+<footer class="text-center text-lg-start text-muted" style="background-color: rgb(3, 218, 197);">
+    <!-- Section: Social media -->
+    <section
+      class="d-flex justify-content-center  p-4 border-bottom"
+    >
+      <!-- Left -->
+      <div class="me-5 d-none d-lg-block">
+        <span>Seguinos en nuestras redes :</span>
+      </div>
+      <!-- Left -->
+  
+      <!-- Right -->
+      <div>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-google"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+      <!-- Right -->
+    </section>
+    <!-- Section: Social media -->
+  
+    <!-- Section: Links  -->
+    <section class="">
+      <div class="container text-center text-md-start mt-5">
+        <div class="row mt-3">
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fas fa-wallet me-3"></i>Waled
+            </h6>
+            <p>
+                <a>WALED es una billetera virtual, para mas informacion haga </a> 
+                <a routerLink="/contact" class="text-reset">click aqui</a>
+            </p>
+          </div>
+ 
+  
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+                para completar
+            </h6>
+            <p>
+              <a href="#!" class="text-reset">para completar</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">para completar</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">para completar</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">para completar</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              links
+            </h6>
+            <p>
+              <a href="#!" class="text-reset">para completar</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">para completar</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">para completar</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">para completar</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Contact
+            </h6>
+            <p><i class="fas fa-home me-3"></i> Cordoba, Cordoba, Argentina</p>
+            <p>
+              <i class="fas fa-envelope me-3"></i>
+              blablabla@gmail.com
+            </p>
+            <p><i class="fas fa-phone me-3"></i>poner un numero</p>
+            <p><i class="fas fa-print me-3"></i>poner numero de fax</p>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+    </section>
+    <!-- Section: Links  -->
+  
+    <!-- Copyright -->
+    <div class="text-center p-4" style="background-color: rgb(0, 207, 187);">
+      © 2021 Copyright:
+      <a class="text-reset fw-bold" href="">Waled</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
