Agregué la página de servicios e importé otros componentes

--- a/src/app/servicios/servicios.component.html
+++ b/src/app/servicios/servicios.component.html
@@ -1,1 +1,414 @@
-<p>servicios works!</p>
+<style>
+  .htiIbS {
+justify-self: start;
+align-items: normal;
+height: 20%;
+display: grid;
+grid-template-columns: repeat(6, 86px);
+-webkit-box-pack: var(--ntp-item-justify,start);
+justify-content: var(--ntp-item-justify,start);
+padding: 24px 56px 24px 24px;
+}
+::before, ::after {
+  background-repeat: no-repeat;
+  box-sizing: inherit;
+  text-decoration: inherit;
+  vertical-align: inherit;
+}
+::selection {
+  background-color: #b3d4fc;
+  color: #000000;
+  text-shadow: none;
+}
+</style>
+<body>
+  <h2><b>Pago de Servicios</b></h2>
+  <div>
+    <h3>Recarga Celulares</h3>
+  </div>
+  <section class="GridItemTopSites-sc-1vpvvs1 hbsZxm">
+    <div class="StyledWidgetContainer-sc-1ghoez3 iKqSnz">
+      <div class="StyledWidget-sc-1ppifmc eLVZst">
+        <div class="List-sc-1x2upj5 htiIbS">
+          <a title="Movistar" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Movistar </p>
+          </a>
+          <a title="Personal" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Personal </p>
+          </a> 
+          <a title="Claro" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Claro </p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <h3>Servicios AFIP</h3>
+  <section class="GridItemTopSites-sc-1vpvvs1 hbsZxm">
+    <div class="StyledWidgetContainer-sc-1ghoez3 iKqSnz">
+      <div class="StyledWidget-sc-1ppifmc eLVZst">
+        <div class="List-sc-1x2upj5 htiIbS">
+          <a title="Vep" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Vep </p>
+          </a>
+          <a title="Monotributo Fisicas" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Monotributo Fisicas </p>
+          </a> 
+          <a title="Agip" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Agip </p>
+          </a>
+          <a title="Agip GCBA Patente " tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh">Agip GCBA Patente</p>
+          </a>
+          <a title="Agip GCBA Infraccion " tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Agip GCBA Infraccion </p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <h3>Electricidad</h3>
+  <section class="GridItemTopSites-sc-1vpvvs1 hbsZxm">
+    <div class="StyledWidgetContainer-sc-1ghoez3 iKqSnz">
+      <div class="StyledWidget-sc-1ppifmc eLVZst">
+        <div class="List-sc-1x2upj5 htiIbS">
+          <a title="EPEC" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> EPEC </p>
+          </a>
+          <a title="Edesur" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Edesur </p>
+          </a> 
+          <a title="Edenor" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Edenor </p>
+          </a>
+          <a title="Edemsa " tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Edemsa </p>
+          </a>
+          <a title=" Coesa " tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Coesa </p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <br>
+  <h3>Telefonía</h3>
+  <section class="GridItemTopSites-sc-1vpvvs1 hbsZxm">
+    <div class="StyledWidgetContainer-sc-1ghoez3 iKqSnz">
+      <div class="StyledWidget-sc-1ppifmc eLVZst">
+        <div class="List-sc-1x2upj5 htiIbS">
+          <a title="Telecom" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Telecom </p>
+          </a>
+          <a title="Movistar" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Movistar </p>
+          </a> 
+          <a title="Telefonía" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Telefonía </p>
+          </a>
+          <a title="Personal " tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh">Personal</p>
+          </a>
+          <a title="Claro " tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Claro </p>
+          </a>
+          <a title="Telecentro " tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Telecentro </p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section> 
+  <br> 
+  <h3>Gaz</h3>
+  <section class="GridItemTopSites-sc-1vpvvs1 hbsZxm">
+    <div class="StyledWidgetContainer-sc-1ghoez3 iKqSnz">
+      <div class="StyledWidget-sc-1ppifmc eLVZst">
+        <div class="List-sc-1x2upj5 htiIbS">
+          <a title="Metrogas" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Metrogas </p>
+          </a>
+          <a title="Naturgy" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Naturgy </p>
+          </a> 
+          <a title="Ecogas" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Ecogas </p>
+          </a>
+          <a title="Distrigas " tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh">Disttrigas</p>
+          </a>
+          <a title="Gas del Sur" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Gas del Sur </p>
+          </a>
+          <a title="Proagas " tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Proagas </p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section> 
+  <br> 
+  <h3>Agua</h3>
+  <section class="GridItemTopSites-sc-1vpvvs1 hbsZxm">
+    <div class="StyledWidgetContainer-sc-1ghoez3 iKqSnz">
+      <div class="StyledWidget-sc-1ppifmc eLVZst">
+        <div class="List-sc-1x2upj5 htiIbS">
+          <a title="Aysa" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Aysa </p>
+          </a>
+          <a title="Aguas Cordobesas" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Aguas Cordobesas </p>
+          </a> 
+          <a title="Aguas Argentinas" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Aguas Argentinas </p>
+          </a>
+          <a title="Coopagua " tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh">Coopagua</p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <h3>TV</h3>
+  <section class="GridItemTopSites-sc-1vpvvs1 hbsZxm">
+    <div class="StyledWidgetContainer-sc-1ghoez3 iKqSnz">
+      <div class="StyledWidget-sc-1ppifmc eLVZst">
+        <div class="List-sc-1x2upj5 htiIbS">
+          <a title="Cablevision" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Cablevision </p>
+          </a>
+          <a title="DirecTV" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> DirecTV </p>
+          </a> 
+          <a title="Cable EXPRESS" tabindex="0" href="https://" class="Tile-sc-1jvs9l5 hCMbeW">
+            <nav class="TileActionsContainer-sc-34vgao fXkOkD">
+              <button class="TileAction-sc-usowy1 dfDNyV">
+                <svg width="65" height="100" xmlns="https://www.w3.org/2000/svg">
+                  <path d="fill-rule=" d="evenodd" fill="">
+                  </path>
+                </svg>
+              </button>
+            </nav><p class="TileTitle-sc-1w2gvhy exnGdh"> Cable EXPRESS </p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
