Agrego botones de pago de servicios y de retiros

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -11,10 +11,14 @@
     </div>
     <!-- Box C -->
     <div class="box">
-      <h2>Los botones de la foto</h2>
-      <a routerLink="/services" routerLinkActive="active" type="submit">
-        Agregar un Servicio
-      </a>
+    <div>
+     <h2>Los botones de la foto</h2>
+        <button type="submit" routerLink="/services">Pagar Servicios</button>
+    </div>
+    <div>
+      <button type="submit" routerLink="/retiros">Retirar Dinero</button>
+    </div>
+      
     </div>
     <!-- Box D -->
     <div class="box">
