I added an stepper and set some styles to the register component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,12 +2,12 @@
   <div class="card login-form">
     <div class="card-body">
       <h3 class="card-title text-left">
-        <span class='d-block'>¡Hola! Para seguir, ingresá</span>
+        <span class="d-block">¡Hola! Para seguir, ingresá</span>
         <span>tu e‑mail o usuario.</span>
       </h3>
-      <form action='post'>
+      <form action="post">
         <div class="form-group user">
-          <label class='mb-1' for="user-email">Usuario o email</label>
+          <label class="mb-1" for="user-email">Usuario o email</label>
           <input
             placeholder="Ingrese su usuario o email"
             type="email"
@@ -16,7 +16,7 @@
           />
         </div>
         <div class="form-group">
-          <label class='mb-1' for="user-password">Contraseña</label>
+          <label class="mb-1" for="user-password">Contraseña</label>
           <input
             placeholder="Ingrese su contraseña"
             type="password"
@@ -24,19 +24,17 @@
             id="user-password"
           />
         </div>
-        <div class='forgot-password align-items-center'>
-          <div class="form-group d-flex align-items-center ">
-            <input type="checkbox" id="remember-me"/>
+        <div class="forgot-password align-items-center">
+          <div class="form-group d-flex align-items-center">
+            <input type="checkbox" id="remember-me" />
             <label for="remember-me">Recordar usuario</label>
           </div>
           <a href="#">¿Olvidó su contraseña?</a>
         </div>
-        <button type="submit" class="btn btn-block">
-          Ingresar
-        </button>
+        <button type="submit" class="btn btn-block">Ingresar</button>
         <div class="sign-up">
-          <span id='create-account'>¿No tiene cuenta?</span> 
-          <a aria-labelledby='create-account' href="#">Crear cuenta</a>
+          <span id="create-account">¿No tiene cuenta?</span>
+          <a aria-labelledby="create-account" href="#">Crear cuenta</a>
         </div>
       </form>
     </div>
