--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,85 +1,88 @@
-<section>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-8 col-lg-8 col-xl-6">
-        <div class="row">
-          <div class="col text-center">
-            <h1>Registrarse</h1>
-            <p class="text-h3">Transferir dinero nunca fue más facil!</p>
-          </div>
-        </div>
-        <div class="row align-items-center">
-          <div class="col mt-4">
-            <input type="text" class="form-control" placeholder="Nombre" />
-          </div>
-        </div>
-        <div class="row align-items-center mt-4">
-          <div class="col">
-            <input
-              type="email"
-              class="form-control"
-              placeholder="Correo electrónico"
-            />
-          </div>
-        </div>
-        <div class="row align-items-center mt-4">
-          <div class="col">
-            <input
-              type="tel"
-              class="form-control"
-              required="required"
-              placeholder="Numero de teléfono"
-            />
-          </div>
-        </div>
+<div class="global-container">
+  <div class="card register-form">
+    <mat-stepper #stepper>
+      <mat-step>
+        <h3 class="card-title text-left">
+          <span> Para crear tu cuenta necesitamos validar tus datos </span>
+        </h3>
+        <p>
+          El proceso puede tomarte unos minutos. Recordá tener a mano tu DNI.
+        </p>
+        <form>
+          <button type="submit" class="btn btn-block">Continuar</button>
+        </form>
+      </mat-step>
+      <mat-step>
+        <h3>Tus datos</h3>
+        <p>
+          Valida tus datos para que nadie pueda ingresar o crear una cuenta a tu
+          nombre
+        </p>
+        <button>Validar e-mail</button>
+        <button>Validar tu identidad</button>
+      </mat-step>
+      <mat-step>
+        <h3>Ingresa tu e-mail</h3>
+        <p>Te enviaremos un mensaje para confirmarlo.</p>
+        <input placeholder="E-mail" /> <br />
+        <button>Enviar mail de confirmación</button>
+      </mat-step>
+      <mat-step>
+        <p>Ingresa el codigo que te enviamos por e-mail</p>
 
-        <div>
-          <br />
-          <p>Necesitamos una foto de tu DNI</p>
-          <label class="image-upload-container btn btn-bwm">
-            <span>Subir una imagen </span>
+        <input placeholder="Codigo" /> <br />
+        <button>Confirmar codigo</button>
+      </mat-step>
 
+      <mat-step
+        [stepControl]="secondFormGroup"
+        errorMessage="Necesitamos una foto de tu DNI."
+      >
+        <form [formGroup]="secondFormGroup">
+          <ng-template matStepLabel>Necesitamos una foto</ng-template>
+          <mat-form-field appearance="fill">
+            <mat-label>Foto</mat-label>
             <input
               #imageInput
               type="file"
               accept="image/*"
               (change)="processFile(imageInput)"
             />
-          </label>
-        </div>
-        <div class="row align-items-center mt-4">
-          <div class="col">
-            <input
-              type="password"
-              class="form-control"
-              placeholder="Contraseña"
-            />
+          </mat-form-field>
+          <div>
+            <p>Go to a different step to see the error state</p>
+            <button mat-button matStepperPrevious>Back</button>
+            <button mat-button matStepperNext>Next</button>
           </div>
-          <div class="col">
-            <input
-              type="password"
-              class="form-control"
-              placeholder="Confirmar contraseña"
-            />
-          </div>
-        </div>
-        <div class="row justify-content-start mt-4">
-          <div class="col">
-            <div class="form-check">
-              <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" />
-                He leido y acepto los
-                <a href=""> terminos y condiciones</a>
-              </label>
-            </div>
+        </form>
+      </mat-step>
 
-            <button style="margin-bottom: 15px" class="btn btn-primary mt-4">
-              Registrarse
-            </button>
+      <mat-step [stepControl]="firstFormGroup" errorMessage="Name is required.">
+        <form [formGroup]="firstFormGroup">
+          <ng-template matStepLabel>Fill out your name</ng-template>
+          <mat-form-field appearance="fill">
+            <mat-label>Name</mat-label>
+            <input
+              matInput
+              placeholder="Last name, First name"
+              formControlName="firstCtrl"
+              required
+            />
+          </mat-form-field>
+          <div>
+            <p>Go to a different step to see the error state</p>
+            <button mat-button matStepperNext>Next</button>
           </div>
+        </form>
+      </mat-step>
+      <mat-step>
+        <ng-template matStepLabel>Done</ng-template>
+        <p>You are now done.</p>
+        <div>
+          <button mat-button matStepperPrevious>Back</button>
+          <button mat-button (click)="stepper.reset()">Reset</button>
         </div>
-      </div>
-    </div>
+      </mat-step>
+    </mat-stepper>
   </div>
-</section>
-<app-footer></app-footer>
+</div>
