--- a/src/app/retiros/retiros.component.html
+++ b/src/app/retiros/retiros.component.html
@@ -4,19 +4,18 @@
 
     <body>
         <div id="withdrawals">
-            Puedes optar por retirar a tu cuenta bancaria
-            o retirar en cajero mediante Punto Efectivo con
+            Puedes optar por retirar a tu cuenta bancaria o retirar en cajero mediante Punto Efectivo con 
             tu número de DNI y teléfono celular.
         </div>
         <form>
             <div>Elige cuenta propia o punto efectivo</div>
             <div>   
-                <input name="retiro tipo" Type="radio" id="Cuenta Propia" Value="Cuenta Propia">
-                <label for="Cuenta Propia">Cuenta Propia</label>
+                <input name="retiro-tipo" Type="radio" id="Cuenta-Propia" Value="Cuenta-Propia">
+                <label for="Cuenta-Propia">Cuenta Propia</label>
             </div>
             <div>
-                <input name="retiro tipo" Type="radio" id="Punto Efectivo" Value="Punto Efectivo">
-                <label for="Punto Efectivo">Punto Efectivo</label>
+                <input name="retiro-tipo" Type="radio" id="Punto-Efectivo" Value="Punto-Efectivo">
+                <label for="Punto-Efectivo">Punto Efectivo</label>
             </div>
         </form>
         <form>  
